--- a/css/main.css
+++ b/css/main.css
@@ -52,7 +52,6 @@ header .donate-link {
   padding: 10px 30px;
   color: white;
   align-self: flex-end;
-  /* add align-self; flex-end; to overwrite align-items: center; from the parent container */
   border-radius: 5px;
 }
 
@@ -200,6 +199,10 @@ footer img {
 
 @media (min-width: 768px) {
 
+  header .donate-link {
+    align-self: flex-end;
+  }
+  
   h1 {
     font-size: 3rem;
   }
@@ -212,16 +215,14 @@ footer img {
 
   .main-content-wrapper {
     flex-grow: 1;
-    /* Add flex-grow: 1; so that the main-content-wrapper fills up any extra space in the parent container. */
     width: 55%;
   }
 
+
+
   aside {
-    width: 300px;
     flex: 0 0 300px;
     align-self: flex-start;
-    /* Add flex: 0 0 300px; so that the sidebar doesn't shrink below the optimum width of 300px. */
-    /* Add align-self: flex-start; to overwrite the default align-items' value of stretch. */
   }
 
   footer img {
@@ -231,6 +232,10 @@ footer img {
 }
 
 @media (min-width: 1024px) {
+  header .donate-link {
+    align-self: flex-end;
+  }
+  
   .about {
     display: flex;
     align-items: center;
@@ -239,13 +244,11 @@ footer img {
   .about-text {
     width: 50%;
     order: 1;
-    /* Change the placement of the text by adding order: 1; */
   }
 
   .about-image {
     width: 50%;
     order: 2;
-    /* Change the placement of the image by adding order: 2; */
   }
 
 }
@@ -268,7 +271,6 @@ footer img {
   }
 
   .program p {
-    /* Add flex-grow: 1; so that the extra space within the card is below the paragraph instead of below the link. */
     flex-grow: 1;
   }
 }
